cluster/apps/default/control-center/django/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-center
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "control-center.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: control-center-nginx
                port:
                  name: http
